--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       </div>
       <div id="menu-component">
         <div class="content">
-           <label for="open-close-menu"><img src="./img/close.svg"/></label>
+           <label id="close-menu" for="open-close-menu"><img src="./img/close.svg"/></label>
           <nav>
             <ul>
               <li><a href="./index.html">Start</a></li>
