--- a/public/about.html
+++ b/public/about.html
@@ -121,5 +121,6 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
