--- a/public/index.html
+++ b/public/index.html
@@ -93,5 +93,6 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
