--- a/public/reanactment.html
+++ b/public/reanactment.html
@@ -62,6 +62,20 @@
             <div class="sliding-element ">
               <div class="image-overlay"></div>
               <div class="image" style="background-image:url(./img/profile.jpg)"></div>
+                  <div class="video-component" data-video-id="oNEW4qPacGw">
+                    <div class="video-play-icon">
+                      <img src="./img/play.svg">
+                    </div>
+                    <div class="video-overlay">
+                      <div class="close-video"></div>
+                      <div class="video-container">
+                      <div class="videowrapper">
+                        <div class="video-slot"></div>
+                        
+                      </div>
+                      </div>
+                    </div>
+                  </div>
               <div class="content">
                   <h3>Vikings</h3>
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
@@ -153,5 +167,6 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
