Way to big commit!

--- a/public/about.html
+++ b/public/about.html
@@ -76,6 +76,50 @@
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
           Sirloin burgdoggen pastrami bacon.
         </p>
+        <div class="button-component">
+          <a href="http://www.jomsborg.com">To Jomsborg</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="image-slide-section">
+      <div class="image-slider">
+        <div class="images">
+            <div class="sliding-element active">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/horse.jpg)"></div>
+              <div class="content">
+                  <h3>Vikings</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/profile.jpg)"></div>
+                  <div class="video-component" data-video-id="mFc_05xzftw">
+                    <div class="video-play-icon">
+                      <img src="./img/play.svg">
+                    </div>
+                    <div class="video-overlay">
+                      <div class="close-video"></div>
+                      <div class="video-container">
+                      <div class="videowrapper">
+                        <div class="video-slot"></div>
+                        
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+              <div class="content">
+                  <h3>Vikings</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
+        </div>
+        <div class="slide-controllers">
+          <img class="btnPrev" src="./img/arrow-left.svg"/>
+          <img class="btnNext" src="./img/arrow-right.svg"/>
+        </div>
       </div>
     </section>
 
@@ -85,13 +129,28 @@
         <img src="./img/viking-icon.svg"/>
         <ul>
           <li>
-            <p>Pernilla</p>
+            <a>
+              <div>
+                <div class="icon" style="background-image:url('./img/closeup.jpg')"></div>
+              </div>
+              <p>Pernilla Svensson</p>
+            </a>
           </li>
           <li>
-            <p>Pernilla 2</p>
+            <a>
+              <div>
+                <div class="icon" style="background-image:url('./img/closeup.jpg')"></div>
+              </div>
+              <p>Pernilla 3</p>
+            </a>
           </li>
           <li>
-            <p>Pernilla 3</p>
+            <a>
+              <div>
+                <div class="icon" style="background-image:url('./img/closeup.jpg')"></div>
+              </div>
+              <p>Pernilla 3</p>
+            </a>
           </li>
         </ul>
       </div>
@@ -110,12 +169,11 @@
         <nav>
           <ul>
             <li><a href="./about.html">Contact</a></li>
-            <li><a href="/#">Media</a></li>
-            <li><a href="./about.hmtl">About</a></li>
+            <li><a href="./vikings.html">Vikings</a></li>
+            <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
             <li><a href="#" id="facebook-contact"></a></li>
-            <li><a href="#" id="mail-contact"></a></li>
           </ul>
         </nav>
       </div>
