--- a/public/hire-us.html
+++ b/public/hire-us.html
@@ -46,6 +46,9 @@
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
           Sirloin burgdoggen pastrami bacon.
         </p>
+        <div class="button-component">
+          <a href="./vikings.html">The Vikings</a>
+        </div>
       </div>
     </section>
 
@@ -126,12 +129,11 @@
         <nav>
           <ul>
             <li><a href="./about.html">Contact</a></li>
-            <li><a href="/#">Media</a></li>
-            <li><a href="./about.hmtl">About</a></li>
+            <li><a href="./vikings.html">Vikings</a></li>
+            <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
             <li><a href="#" id="facebook-contact"></a></li>
-            <li><a href="#" id="mail-contact"></a></li>
           </ul>
         </nav>
       </div>
