--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,11 @@
         <nav>
           <ul>
             <li><a href="./about.html">Contact</a></li>
-            <li><a href="/#">Media</a></li>
-            <li><a href="./about.hmtl">About</a></li>
+            <li><a href="./vikings.html">Vikings</a></li>
+            <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
             <li><a href="#" id="facebook-contact"></a></li>
-            <li><a href="#" id="mail-contact"></a></li>
           </ul>
         </nav>
       </div>
