--- a/public/reanactment.html
+++ b/public/reanactment.html
@@ -81,6 +81,28 @@
                   <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
               </div>
             </div>
+            <div class="sliding-element ">
+              <div class="image-overlay"></div>
+              <div class="image" style="background-image:url(./img/profile.jpg)"></div>
+                  <div class="video-component" data-video-id="lXRfzcWN0jk">
+                    <div class="video-play-icon">
+                      <img src="./img/play.svg">
+                    </div>
+                    <div class="video-overlay">
+                      <div class="close-video"></div>
+                      <div class="video-container">
+                      <div class="videowrapper">
+                        <div class="video-slot"></div>
+                        
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+              <div class="content">
+                  <h3>Vikings</h3>
+                  <p>Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.</p>
+              </div>
+            </div>
         </div>
         <div class="slide-controllers">
           <img class="btnPrev" src="./img/arrow-left.svg"/>
@@ -156,12 +178,11 @@
         <nav>
           <ul>
             <li><a href="./about.html">Contact</a></li>
-            <li><a href="/#">Media</a></li>
-            <li><a href="./about.hmtl">About</a></li>
+            <li><a href="./vikings.html">Vikings</a></li>
+            <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
             <li><a href="#" id="facebook-contact"></a></li>
-            <li><a href="#" id="mail-contact"></a></li>
           </ul>
         </nav>
       </div>
