One more big commit...

--- a/public/reanactment.html
+++ b/public/reanactment.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Skåne Lag" />
+    <meta property="og:description" content="How much does culture influence creative thinking?" />
+    <meta property="og:image" content="./img/someImage.jpg" />
   </head>
   <body id="reanactment">
     <header>
@@ -160,7 +165,21 @@
             <div class="form-container">
               <h3>Join us</h3>
               <h2>Become a viking</h2>
-              <form>
+              <div>
+                <div class="icon phone"></div>
+                <div class="content-wrapper">
+                  <label>Phone</label>
+                  <p>070-6645406</p>
+                </div>
+              </div>
+              <div>
+                <div class="icon email"></div>
+                <div class="content-wrapper">
+                  <label>E-mail</label>
+                  <p>some-mail@skanelag.se</p>
+                </div>
+              </div>
+              <!--<form>
                 <label>Name</label>
                 <input type="text">
                 <label>Email</label>
@@ -168,7 +187,7 @@
                 <label>Message</label>
                 <textarea rows="3"></textarea>
                 <input class="button-component-form" type="submit" value="Send">
-              </form>
+              </form>-->
             </div>
           </div>
         </div>
@@ -182,7 +201,7 @@
             <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
-            <li><a href="#" id="facebook-contact"></a></li>
+            <li><a href="https://www.facebook.com/SkaneLagJomsborg/" id="facebook-contact"></a></li>
           </ul>
         </nav>
       </div>
