--- a/public/hire-us.html
+++ b/public/hire-us.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Skåne Lag" />
+    <meta property="og:description" content="How much does culture influence creative thinking?" />
+    <meta property="og:image" content="./img/someImage.jpg" />
   </head>
   <body id="hire-us">
     <header>
@@ -111,7 +116,21 @@
           <div class="form-container">
             <h3>More info</h3>
             <h2>Get in touch</h2>
-            <form>
+            <div>
+              <div class="icon phone"></div>
+              <div class="content-wrapper">
+                <label>Phone</label>
+                <p>070-6645406</p>
+              </div>
+            </div>
+            <div>
+              <div class="icon email"></div>
+              <div class="content-wrapper">
+                <label>E-mail</label>
+                <p>some-mail@skanelag.se</p>
+              </div>
+            </div>
+            <!--<form>
               <label>Name</label>
               <input type="text">
               <label>Email</label>
@@ -119,7 +138,7 @@
               <label>Message</label>
               <textarea rows="3"></textarea>
               <input class="button-component-form" type="submit" value="Send">
-            </form>
+            </form>-->
           </div>
         </div>
       </div>
@@ -133,7 +152,7 @@
             <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
-            <li><a href="#" id="facebook-contact"></a></li>
+            <li><a href="https://www.facebook.com/SkaneLagJomsborg/" id="facebook-contact"></a></li>
           </ul>
         </nav>
       </div>
