--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Skåne Lag" />
+    <meta property="og:description" content="How much does culture influence creative thinking?" />
+    <meta property="og:image" content="./img/someImage.jpg" />
   </head>
   <body id="start">
     <header>
@@ -86,7 +91,7 @@
             <li><a href="./about.html">About</a></li>
           </ul>
           <ul class="social-media">
-            <li><a href="#" id="facebook-contact"></a></li>
+            <li><a href="https://www.facebook.com/SkaneLagJomsborg/" id="facebook-contact"></a></li>
           </ul>
         </nav>
       </div>
