--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Vikings</title>
+    <title>Oops, page not found!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/main.eabeccdd.css">
@@ -28,7 +28,7 @@
     <meta property="og:description" content="How much does culture influence creative thinking?" />
     <meta property="og:image" content="./img/someImage.jpg" />
   </head>
-  <body id="vikings">
+  <body id="error">
     <header>
       <input type="checkbox" name="open-close-menu" id="open-close-menu">
       <div class="content">
@@ -52,66 +52,11 @@
     </header>
     <section class="top-section">
       <div class="content">
-        <h1>The Vikings</h1>
-        <h2>Of Skåne Lag</h2>
-      </div>
-    </section>
-    <section class="vikings-section">
-      <div class="content">
-
-        <div class="column">
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
+        <h1>Oops!</h1>
+        <h2>He might be our leader, he might be our God. <br><span>But not even Aaron could find this page!</span></h2>
+        <div class="button-component">
+          <a href="./index.html">Main page</a>
         </div>
-
-        <div class="column">
-          <div>
-            <img src="./img/jacob.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-        </div>
-
-        <div class="column">
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-        </div>
-        
-
       </div>
     </section>
     <footer>
